# Merge-Images-Web

./: AGENTS.md  ARCHITECTURE.md  LICENSE  REQUIREMENTS.md
.github/workflows/: deploy.yml
app/: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  svelte.config.js
app/src/lib/: mergerState.svelte.ts  types.ts
app/src/lib/components/: EmptyState.svelte  ErrorDialog.svelte  ImageItem.svelte  ImageList.svelte  ImageMerger.svelte  MergeControls.svelte  MergeOptions.svelte  Preview.svelte
app/src/lib/utils/: deviceClass.ts  download.ts  formats.ts  pixelLimits.ts  thumbnails.ts  workerManager.ts
app/src/lib/workers/: merge.worker.ts  types.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/preview/: +page.svelte
app/tests/: download.spec.ts  errors.spec.ts  import.spec.ts  merge.spec.ts  reorder.spec.ts
engine/: Cargo.toml
engine/src/: chrome_strip.rs  dimension.rs  error.rs  exif.rs  lib.rs  merge.rs  overlap.rs  scale.rs  types.rs
engine/tests/: wasm_tests.rs
