[package]
name = "merge-images-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp", "tiff"] }
imageproc = { version = "0.25.0", default-features = false }
js-sys = "0.3.83"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.17"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
image = { version = "0.25.9", default-features = false, features = ["png"] }
